--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@types/d3": "^7.4.3",
     "axios": "^1.12.2",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
