--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "prepare": "husky install"
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "msw": "^2.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
