--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "prepare": "husky install"
+    "prepare": "node scripts/prepare.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
