--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "msw": "^2.6.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
